restructured code files; fixed issue with order summary list not wrapping

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -229,6 +229,7 @@ main #main-section-listing #recipe-result-controls-btn-group-count {
   margin-bottom: 1rem;
   font-size: 1.25rem;
   display: flex;
+  flex-wrap: wrap;
   list-style-type: inherit;
 }
 #hdr-bar .tooltip .tooltip-content #order-summary #order-summary-list li .order-list-body::before {
@@ -272,9 +273,13 @@ main #main-section-listing #recipe-result-controls-btn-group-count {
 }
 #hdr-bar .tooltip .tooltip-content #order-summary #order-summary-list li {
   background-color: lightgray;
-  padding: 1.25rem 0.95rem;
+  padding: 1.15rem 0.95rem;
   border-radius: 10px;
 }
+#hdr-bar .tooltip .tooltip-content #order-summary #order-summary-list.hidden {
+  display: none;
+}
+
 #hdr-bar .tooltip .tooltip-content #order-summary #list-view-toggle-btn {
   position: relative;
   left: 40%;
